--- a/templates/musicapp/hindi_songs.html
+++ b/templates/musicapp/hindi_songs.html
@@ -13,8 +13,8 @@
         <div class="input-group">
           <input type="text" class="form-control input-lg " name="q" value="{{ request.GET.q }}"
             placeholder="Search Songs " />
-          <span class='input-group-btn'>
-            <button type="button" class="btn btn-primary" type="submit">Search</button>
+          <span class='input-group-btn mx-2'>
+            <button type="submit" style="border-radius: 5px; background-color: #c23232; border-color: white;" class="btn btn-primary">Search</button>
           </span>
         </div>
       </div>
@@ -37,6 +37,8 @@
         <img src="{{ song.song_img.url}}" class="img-responsive" height="135" width="135"
           style="border-radius: 8px 8px 8px 8px;">
         <div class="overlay">
+          <a class="btn btn-outline-light mt-5 mx-1" href="{% url 'play_song' song.id %}"><i class="fa fa-play"
+              aria-hidden="true"></i></a>
           <a class="btn btn-outline-light mt-5 mx-1" href="{% url 'detail' song.id %}"><i class="fa fa-info-circle"
               aria-hidden="true"></i></a>
         </div>
@@ -48,5 +50,23 @@
   </div>
 </div>
 <br>
-
+<br>
+<br>
+<footer class="footer">
+  <div class="player" style="padding-left: 10px;padding-top:10px;background-color: #c23232;">
+    <div class="left"><img src="{{last_played.song_img.url}}" height="90" width="90"
+        style="border-radius: 10px 10px 10px 10px;"></div>
+    <div class="right">
+      <div class="top">
+        <a class="song" style="margin-left: 15px;color: white;">{{last_played.name}}</a>
+        <a class="artist" style="margin-left: 15px;color:white">{{last_played.album}}</a>
+      </div>
+      <div class="bottom">
+        <audio controls="" autoplay name="media"
+          style="margin-left: 20px;margin-bottom: 10px;width: 1230px;height:30px">
+          <source src="{{last_played.song_file.url}}" type="audio/mpeg"></audio>
+      </div>
+    </div>
+  </div>
+</footer>
 {% endblock body %}
