--- a/templates/musicapp/recent.html
+++ b/templates/musicapp/recent.html
@@ -13,7 +13,7 @@
           <input type="text" class="form-control input-lg " name="q" style="border-radius: 5px;"
           value="{{ request.GET.q }}" placeholder= "Search Songs "/>               
           <span class='input-group-btn mx-2'>
-            <button type="submit" style="border-radius: 5px;" class="btn btn-primary">Search</button>
+            <button type="submit" style="border-radius: 5px; background-color: #c23232; border-color: white;" class="btn btn-primary">Search</button>
           </span>
         </div>
       </div>
@@ -56,7 +56,7 @@
 <br>
 <br>
 <footer class="footer">
-  <div class="player" style="padding-left: 10px;padding-top:10px;background-color: #7d3b3b;">
+  <div class="player" style="padding-left: 10px;padding-top:10px;background-color: #c23232;">
     <div class="left"><img src="{{last_played.song_img.url}}" height="90" width="90"
         style="border-radius: 10px 10px 10px 10px;"></div>
     <div class="right">
