--- a/templates/musicapp/upload.html
+++ b/templates/musicapp/upload.html
@@ -98,7 +98,7 @@
                                                 </select>
 
                                                 <label for="songimage" class="col-form-label" style="color: black;">Song Image</label>
-                                                <input type="file" class="form-control" id="songimage" name="songimage" required>
+                                                <input type="file" class="form-control" id="songimage" name="songimage" accept="image/x-png,image/gif,image/jpeg">
 
                                                 <label for="year" class="col-form-label" style="color: black;">Year (when Released)</label>
                                                 <input type="text" class="form-control" id="year"
@@ -109,7 +109,7 @@
                                                     name="singer" required>
 
                                                 <label for="songfile" class="col-form-label" style="color: black;">Song File (.mp3)</label>
-                                                <input type="file" class="form-control" id="songfile" name="songfile" required>
+                                                <input type="file" class="form-control" id="songfile" name="songfile" required accept=".mp3,audio/*">
 
                                             </div>
                                         </form>
