--- a/templates/authentication/login.html
+++ b/templates/authentication/login.html
@@ -8,6 +8,7 @@
     margin: 20px 0 10px;
     text-align: center;
     border-top: 1px solid #ccc;
+    color: black;
 }
 .or-seperator i {
     padding: 0 10px;
@@ -25,7 +26,7 @@
   <br>
   <h1 class="text-center">Sign In</h1>
   <br>
-  <a href="{% provider_login_url 'google' process='login' %}" class="btn btn-outline-dark btn-block">
+  <a href="{% provider_login_url 'google' process='login' %}" class="btn btn-outline-dark btn-block" style="color: white;">
     <img width="20px" style="margin-bottom:3px; margin-right:5px" alt="Google sign-in" src="https://upload.wikimedia.org/wikipedia/commons/thumb/5/53/Google_%22G%22_Logo.svg/512px-Google_%22G%22_Logo.svg.png" />
     Sign in with Google
   </a>
@@ -41,7 +42,7 @@
   </form>
   <br>
   <!-- <p>Already have an account? Please <a href="{% url 'signup' %}">log in</a>.</p> -->
-  <p>Don't have an account? Please <a href="{% url 'signup' %}">sign up</a> first.</p>
+  <p>Don't have an account? Please <a href="{% url 'signup' %}" style="color: skyblue;">sign up</a> first.</p>
   
 </main>
 {% endblock body %}
