Made some changes in the code

--- a/templates/musicapp/english_songs.html
+++ b/templates/musicapp/english_songs.html
@@ -1,6 +1,6 @@
 {% extends 'base.html' %}
 {% load socialaccount %}
-{% block title %} English Songs {% endblock title %}
+{% block title %} GeetSuno - English Songs {% endblock title %}
 
 {% block body %}
 
