--- a/templates/musicapp/hindi_songs.html
+++ b/templates/musicapp/hindi_songs.html
@@ -1,6 +1,6 @@
 {% extends 'base.html' %}
 {% load socialaccount %}
-{% block title %} Hindi Songs {% endblock title %}
+{% block title %} GeetSuno - Hindi Songs {% endblock title %}
 
 {% block body %}
 
