--- a/templates/musicapp/index.html
+++ b/templates/musicapp/index.html
@@ -1,6 +1,6 @@
 {% extends 'base.html' %}
 {% load socialaccount %}
-{% block title %} Home {% endblock title %}
+{% block title %} GeetSuno {% endblock title %}
 
 {% block body %} 
 
