--- a/templates/musicapp/recent.html
+++ b/templates/musicapp/recent.html
@@ -1,6 +1,6 @@
 {% extends 'base.html' %}
 {% load socialaccount %}
-{% block title %} Recently Played {% endblock title %}
+{% block title %} GeetSuno - Recently Played {% endblock title %}
 
 {% block body %}
 <br>
