--- a/templates/musicapp/all_songs.html
+++ b/templates/musicapp/all_songs.html
@@ -1,6 +1,6 @@
 {% extends 'base.html' %}
 {% load socialaccount %}
-{% block title %} All Songs {% endblock title %}
+{% block title %} GeetSuno - All Songs {% endblock title %}
 {% block body %}
 
 <br>
