--- a/templates/musicapp/detail.html
+++ b/templates/musicapp/detail.html
@@ -1,6 +1,6 @@
 {% extends 'base.html' %}
 {% load socialaccount %}
-{% block title %} Detail {% endblock title %}
+{% block title %} GeetSuno - Detail {% endblock title %}
 {% block header %}
 <style>
     .heart {
