--- a/templates/musicapp/favourite.html
+++ b/templates/musicapp/favourite.html
@@ -1,6 +1,6 @@
 {% extends 'base.html' %}
 {% load socialaccount %}
-{% block title %} Favourites {% endblock title %}
+{% block title %} GeetSuno - Favourites {% endblock title %}
 
 {% block body %}
 <br>
