--- a/templates/musicapp/mymusic.html
+++ b/templates/musicapp/mymusic.html
@@ -1,6 +1,6 @@
 {% extends 'base.html' %}
 {% load socialaccount %}
-{% block title %} MusicApp - Home {% endblock title %}
+{% block title %} GeetSuno - Home {% endblock title %}
 
 <head>
     <title>My Music</title>
