--- a/templates/musicapp/playlist.html
+++ b/templates/musicapp/playlist.html
@@ -1,6 +1,6 @@
 {% extends 'base.html' %}
 {% load socialaccount %}
-{% block title %} Playlist {% endblock title %}
+{% block title %} GeetSuno - Playlist {% endblock title %}
 {% block body %}
 {% load static %}
 <br>
