--- a/templates/musicapp/playlist_songs.html
+++ b/templates/musicapp/playlist_songs.html
@@ -1,6 +1,6 @@
 {% extends 'base.html' %}
 {% load socialaccount %}
-{% block title %} Playlist Songs {% endblock title %}
+{% block title %} GeetSuno - Playlist Songs {% endblock title %}
 {% block body %}
 <br>
 <div class="container">
