--- a/templates/musicapp/upload.html
+++ b/templates/musicapp/upload.html
@@ -1,6 +1,6 @@
 {% extends 'base.html' %}
 {% load socialaccount %}
-{% block title %} Detail {% endblock title %}
+{% block title %} GeetSuno - Upload {% endblock title %}
 {% block header %}
 {% endblock header %}
 {% block body %}
